# qt-opencv-multithreaded

./: CMakeLists.txt  README.md  SyncSem.cpp  SyncSem.h
src/: Buffer.h  CMakeLists.txt  COPYING  CameraConnectDialog.cpp  CameraConnectDialog.h  CameraConnectDialog.ui  CameraView.cpp  CameraView.h  CameraView.ui  CaptureThread.cpp  CaptureThread.h  Config.h  Config.h.cmake  Controller.cpp  Controller.h  DefaultValues.h  FrameLabel.cpp  FrameLabel.h  ImageBuffer.cpp  ImageBuffer.h  ImageProcessing.h  ImageProcessingSettingsDialog.cpp  ImageProcessingSettingsDialog.h  ImageProcessingSettingsDialog.ui  MainWindow.cpp  MainWindow.h  MainWindow.ui  MatToQImage.cpp  MatToQImage.h  ProcessingSettingsDialog.cpp  ProcessingSettingsDialog.h  ProcessingSettingsDialog.ui  ProcessingThread.cpp  ProcessingThread.h  QLabelWithMouseTracking.cpp  QLabelWithMouseTracking.h  SharedImageBuffer.cpp  SharedImageBuffer.h  ShowIplImage.cpp  ShowIplImage.h  (+4 more)
